// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onCreateWebpackConfig Stage: build-html / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "null-loader",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`onCreateWebpackConfig Stage: build-html / PostCss options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "null-loader",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`onCreateWebpackConfig Stage: build-javascript / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": false,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`onCreateWebpackConfig Stage: build-javascript / PostCss options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`onCreateWebpackConfig Stage: develop / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`onCreateWebpackConfig Stage: develop / PostCss options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`onCreateWebpackConfig Stage: develop-html / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "null-loader",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`onCreateWebpackConfig Stage: develop-html / PostCss options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "null-loader",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;
